[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scripts/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Player/MarginContainer.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Player/Head.gd" type="Script" id=3]
[ext_resource path="res://Texturas/Crosshair_branco.png" type="Texture" id=4]
[ext_resource path="res://fontes/DTM-Mono.otf" type="DynamicFontData" id=5]
[ext_resource path="res://fontes/DTM-Sans.otf" type="DynamicFontData" id=6]
[ext_resource path="res://Sons/Floresta/Grass_FootSteps.ogg" type="AudioStream" id=7]
[ext_resource path="res://Sons/Floresta/Grass_Runining.ogg" type="AudioStream" id=8]
[ext_resource path="res://Sons/Floresta/Wood_FootSteps.ogg" type="AudioStream" id=9]

[sub_resource type="CapsuleMesh" id=1]
radius = 0.5
mid_height = 1.5

[sub_resource type="CapsuleShape" id=2]
height = 3.0

[sub_resource type="CylinderShape" id=3]

[sub_resource type="Animation" id=4]
resource_name = "Andando"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Camera:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, -1 ), Vector3( 0, 0, 1 ) ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("Grama_Passos")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=10]
resource_name = "Andando_Wood"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Camera:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, -1 ), Vector3( 0, 0, 1 ) ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("Andando_Wood")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 9 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 9 )
} ],
"times": PoolRealArray( 0, 0.4 )
}

[sub_resource type="Animation" id=8]
resource_name = "Correndo"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Camera:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, -2 ), Vector3( 0, 0, 2 ) ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("Grama_Correndo")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 8 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 8 )
} ],
"times": PoolRealArray( 0, 0.5 )
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Camera:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="DynamicFont" id=6]
size = 13
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 13
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=9]
size = 11
font_data = ExtResource( 6 )

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
visible = false
mesh = SubResource( 1 )
material/0 = null

[node name="Colisao" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 2 )

[node name="Pe" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.49601, 0 )
shape = SubResource( 3 )

[node name="Head" type="Spatial" parent="."]
script = ExtResource( 3 )

[node name="Camera" type="Camera" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1618, -0.332065 )

[node name="Camera_anim" type="AnimationPlayer" parent="Head"]
anims/Andando = SubResource( 4 )
anims/Andando_Wood = SubResource( 10 )
anims/Correndo = SubResource( 8 )
anims/RESET = SubResource( 5 )

[node name="CanvasLayer" type="CanvasLayer" parent="Head"]

[node name="MarginContainer" type="MarginContainer" parent="Head/CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="Head/CanvasLayer/MarginContainer"]
margin_right = 320.0
margin_bottom = 240.0
alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Head/CanvasLayer/MarginContainer/HBoxContainer"]
margin_left = 268.0
margin_right = 320.0
margin_bottom = 240.0
alignment = 2

[node name="Stat1" type="Label" parent="Head/CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer"]
visible = false
margin_right = 24.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 6 )
text = "aaa"

[node name="stat2" type="Label" parent="Head/CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer"]
visible = false
margin_right = 24.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 7 )
text = "aaa"

[node name="Label" type="Label" parent="Head/CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 226.0
margin_right = 52.0
margin_bottom = 240.0
custom_colors/font_color = Color( 1, 1, 1, 0.235294 )
custom_fonts/font = SubResource( 9 )
text = "Alpha 0.1v"

[node name="HBoxContainer2" type="HBoxContainer" parent="Head/CanvasLayer/MarginContainer"]
margin_right = 320.0
margin_bottom = 240.0

[node name="VBoxContainer" type="VBoxContainer" parent="Head/CanvasLayer/MarginContainer/HBoxContainer2"]
margin_bottom = 240.0
alignment = 2

[node name="Interação" type="Label" parent="Head/CanvasLayer/MarginContainer/HBoxContainer2/VBoxContainer"]
visible = false
margin_top = 226.0
margin_right = 98.0
margin_bottom = 240.0
custom_colors/font_color = Color( 1, 1, 1, 0.235294 )
custom_fonts/font = SubResource( 9 )
text = "\"E\" para interagir"

[node name="olho_container" type="CenterContainer" parent="Head/CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="crosshair" type="TextureRect" parent="Head/CanvasLayer/olho_container"]
margin_left = 157.0
margin_top = 117.0
margin_right = 163.0
margin_bottom = 123.0
texture = ExtResource( 4 )
stretch_mode = 4

[node name="Olho" type="RayCast" parent="Head"]
transform = Transform( -1, -8.74228e-08, 3.82137e-15, 0, -4.37114e-08, -1, 8.74228e-08, -1, 4.37114e-08, -2.32831e-10, 1.14934, 0 )
enabled = true
cast_to = Vector3( 0, 3, 0 )
collide_with_areas = true
collide_with_bodies = false

[node name="Grama_Passos" type="AudioStreamPlayer" parent="Head"]
stream = ExtResource( 7 )

[node name="Grama_Correndo" type="AudioStreamPlayer" parent="Head"]
stream = ExtResource( 8 )

[node name="Andando_Wood" type="AudioStreamPlayer" parent="Head"]
stream = ExtResource( 9 )
volume_db = -3.5

[node name="GroundCheck" type="RayCast" parent="."]
transform = Transform( 0.999999, 0.00131134, 0.000342011, -0.00131041, 0.999995, -0.00271794, -0.000345556, 0.00271749, 0.999996, 0.0305619, -2, 0.0185504 )
enabled = true
cast_to = Vector3( 0, -1.5, 0 )
